# Rice

./: .env.example  .gitignore  CHECKLIST.md  CHECKLIST_STREAMLIT.md  DEPLOYMENT_QUICK_START.md  FINAL_VERIFICATION.md  FUNCTIONALITY_REPORT.md  Makefile  PROJECT_STATUS_REPORT.md  embed-example.html  instructions.txt  instructionsPhase2.txt  pyproject.toml  requirements.txt  verify_system.py
.streamlit/: config.toml  secrets.toml.example
app/: Main.py
app/components/: charts.py  map.py
data/: manifest.csv
data/mart/: hydro_scenarios.parquet  rice_polygons_2022.parquet
data/stage/: awdb_swe_daily.parquet  b120_forecast.parquet  cimis_daily.parquet  ers_prices.parquet
docs/: PRICE_DATA_ALTERNATIVES.md  README.md  assumptions.md  case_study_template.md  data_sources.md  ssebop_data_access_research.md
etl/: fetch_all.py  fetch_ams_rice.py  fetch_awdb.py  fetch_b120.py  fetch_cimis.py  fetch_dwr_cropmap.py  fetch_ers_rice_outlook.py  fetch_nass.py  fetch_ssebop.py  utils_manifest.py  utils_pdf.py
models/: profit.py  scenarios.py
tests/: test_etl_basic.py  test_profit.py
